kubernetes/apps/ingress/gateways/ingressgateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: cilium-ingressgateway
  namespace: ingress
spec:
  addresses:
    - type: "IPAddress"
      value: "${CILIUM_LB_IP}"
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.${DOMAIN}"
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: "${DOMAIN/./-}-tls"
